# ChangeLog for net-proxy/swiftiply
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-proxy/swiftiply/ChangeLog,v 1.5 2013/05/02 19:24:32 tomwij Exp $

  02 May 2013; Tom Wijsman <TomWij@gentoo.org>
  +files/swiftiply-0.6.4-test-http-headers-order-fix.patch,
  swiftiply-0.6.4.ebuild:
  Gave the distfile a more unique name. Added a patch to no longer test
  uninportant random data causing tests to unnecessarly fail, all test pass
  multiple times. Removed QA warning.

  02 May 2013; Tom Wijsman <TomWij@gentoo.org>
  +files/swiftiply-0.6.4-cache-base-mixin-fix.patch, swiftiply-0.6.4.ebuild:
  Fixed a test failure, there are still random failures left where the HTTP
  headers return in a different order.

*swiftiply-0.6.4 (19 Apr 2013)

  19 Apr 2013; Tom Wijsman <TomWij@gentoo.org>
  +files/swiftiply-0.6.4-test-deque-fix.patch, +swiftiply-0.6.4.ebuild,
  -files/swiftiply-0.6.1.1-ffr-stderror.patch, -swiftiply-0.6.1.1-r1.ebuild:
  Version bump to 0.6.4 which fixes all compilation errors and most test errors,
  there is only one failing test remaining.

*swiftiply-0.6.1.1-r1 (31 Mar 2013)

  31 Mar 2013; Tom Wijsman <TomWij@gentoo.org>
  +files/swiftiply-0.6.1.1-ffr-stderror.patch, +swiftiply-0.6.1.1-r1.ebuild,
  -swiftiply-0.6.1.1.ebuild:
  Fixed building of the fastfilereader extension. Added necessary dev-
  ruby/cgi_multipart_eof_fix and www-servers/mongrel dependencies. Made testing
  phase empty since there is no Rakefile.

*swiftiply-0.6.1.1 (31 Mar 2013)

  31 Mar 2013; Tom Wijsman <TomWij@gentoo.org> +metadata.xml,
  +swiftiply-0.6.1.1.ebuild:
  New ebuild for swiftiply. Ebuild contributed by Jochen Schalanda which has
  been updated to use the new eclasses. Fixes bug #198500.