@@ -1,14 +1,0 @@
-DEFINED_PHASES=compile configure install prepare setup test unpack
-DEPEND=ruby_targets_ruby18? ( dev-lang/ruby:1.8 ) ruby_targets_ruby18? ( dev-lang/ruby:1.8 ) ruby_targets_ruby18? ( doc? ( dev-ruby/rake[ruby_targets_ruby18] ) ) ruby_targets_ruby18? ( test? ( dev-ruby/rake[ruby_targets_ruby18] ) ) ruby_targets_ruby18? ( virtual/rubygems[ruby_targets_ruby18] ) test? ( ruby_targets_ruby18? ( virtual/rubygems[ruby_targets_ruby18] ) )
-DESCRIPTION=A clustering proxy server for web applications.
-EAPI=5
-HOMEPAGE=http://swiftiply.swiftcore.org/
-IUSE=elibc_FreeBSD ruby_targets_ruby18 elibc_FreeBSD ruby_targets_ruby18 doc test test
-KEYWORDS=~amd64 ~x86
-LICENSE=Ruby
-RDEPEND=>=dev-ruby/eventmachine-0.9.0 ruby_targets_ruby18? ( dev-lang/ruby:1.8 ) ruby_targets_ruby18? ( dev-lang/ruby:1.8 ) ruby_targets_ruby18? ( virtual/rubygems[ruby_targets_ruby18] )
-REQUIRED_USE=|| ( ruby_targets_ruby18 ) || ( ruby_targets_ruby18 )
-SLOT=0
-SRC_URI=https://github.com/wyhaines/swiftiply/archive/0.6.4.tar.gz -> swiftiply-0.6.4.tar.gz
-_eclasses_=eutils	63afaaed8aa819fdcb814c7cd39495a2	java-utils-2	6032f7ec6471c6459da900e11f0f7bf7	multilib	892e597faee02a5b94eb02ab512e7622	ruby-fakegem	6e366daedf25d7020291916549562bbf	ruby-ng	69c01a1b984ed066bc91b4397b002f6a	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	6601b4c5b3f019a993db59a50e1854e4
-_md5_=114a208a0390a59046d8fdbbded04174
