@@ -1,12 +1,0 @@
-DEFINED_PHASES=prepare
-DEPEND=>=sys-libs/readline-4.1-r2 || ( >=sys-devel/automake-1.12:1.12 >=sys-devel/automake-1.13:1.13 ) >=sys-devel/autoconf-2.68 sys-devel/libtool
-DESCRIPTION=Unit conversion program
-EAPI=4
-HOMEPAGE=http://www.gnu.org/software/units/units.html
-KEYWORDS=alpha amd64 ~arm hppa ppc sparc x86 ~amd64-linux ~x86-linux
-LICENSE=GPL-3
-RDEPEND=|| ( dev-lang/python:2.5 dev-lang/python:2.6 dev-lang/python:2.7 ) >=sys-libs/readline-4.1-r2
-SLOT=0
-SRC_URI=mirror://gnu/units/units-2.01.tar.gz
-_eclasses_=autotools	16761a2f972abd686713e5967ff3c754	eutils	63afaaed8aa819fdcb814c7cd39495a2	libtool	b1c8688e60f9580bcb9bb46e08737eb1	multilib	892e597faee02a5b94eb02ab512e7622	multiprocessing	a2130e6fc4aa4c6a24b265ca0cbcc2b6	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=720a6e328eea5f744af83d2cfedaead3
