@@ -5,17 +5,17 @@ AUX swiftiply-0.6.4-cache-base-mixin-fix.patch 419 SHA256 c594be03e46721ea04423e
 AUX swiftiply-0.6.4-test-deque-fix.patch 539 SHA256 c5c519cc228fdb335900e0c8bfcae9c7c11b49e03042b33e0e8efb03064e12f7 SHA512 2d6b3bf31b6f74255c982e9410b95de417af921e1108dc96097e3eb9bbb41dcd6c9dcfa49bfab74fb6303bab53e9cf9c3187974de13c97a02a92913db76c523c WHIRLPOOL 8ba06e84c00438195f6440c16ca5a20c90c12e7207f506f4de25a5c97df09715eab5b53e632d32a1516195e6ef306caebb5b624f43a727b835bcf5d7cc031902
 AUX swiftiply-0.6.4-test-http-headers-order-fix.patch 2731 SHA256 c41334522d23d06a338052820d83636534ce54dd9c32c3b4e88ff43fc7176903 SHA512 2f6aaa97fa86bba000b45f7ba219354dd89259f5ca7f49a7017a96e7e22f44aebb4fe3d91bb96d576ebb93f16fc43f15f07ed0a8fc4ce22e581e2b3dc3a75907 WHIRLPOOL 64210e0df0b7cd3d3ebd3d0dda2dff8dd3900d556afdf899977ec32f9363177b59b4c62f3bc1bdddc8775b4bb362465e2d245a508be8125436829cdfcb4e6e98
 DIST swiftiply-0.6.4.tar.gz 84807 SHA256 a65d3fee5ac320af8190a7ca8ac2e63e42f62c31b1806e98c38dd164972ae8f7 SHA512 0255d891b85162f993d707d4bbe977b9aeaed5baf144c53dc3cdc938b69fc9f4a184b6805f71a70ed8561adf0826aa8c1c8c0347523b33795d8d05c84bd12e84 WHIRLPOOL 166975d2e808489689e0ef3aabddd9fd9c1c591fd14a6d65625985c50b2a59b1df92d6ae61062f6d383fad6b0515aff920cb6bfbca4330473c41b48d72a64f7f
-EBUILD swiftiply-0.6.4.ebuild 1616 SHA256 1865e5d732a2db8426baaa3ad8e36b38bcb15689bd25b54899d8eed3e446ffd6 SHA512 660f2c3a9dc98bb1f1360724f30ca8aaba69db1a395d71042cb70f4008840e77e584911165329d69b4dce770eb844e3fe902251d852626dd131266ceb9edc276 WHIRLPOOL df77c6a76e39ace05b043698f0566c2de1eebcab12542094667af32226d4ed246eef403f193c102b9387096b2b448529e4af5f7eb85757a0a04bcc45544b1a51
-MISC ChangeLog 1770 SHA256 9e7f203d6635f2e81434cda9545305f875ba809a5cf936e25f1d6cc14c6ea63a SHA512 f46bf5d869e0d3ecae2504223e955215a12ff8ee1a2bb03741bd8e20b35f9175f7de147ffa744166ffae8f3df05c837da222de59d8ece244cc8ed90fd86eca24 WHIRLPOOL 84a5f97b34b7aaa0c6a3905e5e12c8c16f6db2e2a409dfe7f48028d27c6827b5e3762299ea55dcff82945ebf06cbca22f1d16125fe18b66cf1740a5136cf0c19
+EBUILD swiftiply-0.6.4-r1.ebuild 1731 SHA256 7f2229eafc174b90ee0b30336df4690d65c8b88033b1cf61e2a483e9192b9121 SHA512 55e785031d08589608a2b388ed387ded505146352cdb8ad615dd53779c32bf67658c2f089016cc5096bedddc290bf74e61d4ae041b9d12d8f16623dd69b4738d WHIRLPOOL 12ecd5cb8a2dac47459edf8a88a8693908c8f63fb168f42c14459e86f79b364a2f32c4334c774241d04c7f5ae76364b62a9610eb52b98952039d822b821de355
+MISC ChangeLog 2218 SHA256 8839d26e4cb10688a6790d437595719ab5f51fd78ac8e6fda3da8c543f518eec SHA512 1bb6bc1e03c25881e020505a0b370a90c720982787efca709c5905e89e54e3865d1e34bc551f8e8cfbb5e2276b8f9df9724a74a4d78e15232b13a589e0dad819 WHIRLPOOL c04819fde202e024a8743302f540b19b27e458f70f5f700c2899b80ebbf02fb61baed7a56182033e28b8046edc28c4b26d697357ffdd18678d6fc7f4e6296088
 MISC metadata.xml 257 SHA256 0cc36071e7f8656cf33aabe253d0ffb8427111e4722de11e7ec72f7a20f1836b SHA512 5c982ff605ed691eb6d9ef88d0f199b72be9a505ce5e4e642dbf8a69cc65a036d3708e567ade3f262084c4c81c6ea5649716d72de069384e60544fccd070d829 WHIRLPOOL e378536005aa9a700370b249717abd8b66ac062f4fbf27dac2bc9cc074239cda9fcafe59f36a3505d20cbf3f9e2243ac74488db2d26acd027c1d9c39b6b89bdd
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.21 (GNU/Linux)
 
-iQEcBAEBCAAGBQJRgr0eAAoJEJWyH81tNOV91QQIAK75D9WFikHMF12tWccqNuHt
-e9Itn7iAEZXs/LoUxJy/+EUuKH3CA7HiLebf2/RDRk5CFCCZn1Q30Fo/RolQFdBi
-h49lHPCExGI0gKJHMTPInSpw+O07x2cyTvh0Q4Fkacjy66Axmy4PizKOGWnIpGXn
-cmZQswqcey1lSoHiKRVuu0S4DRMuJJvGP/LMiP6IhqtH1DYjnMBfVOd0Nvgt330L
-XOAWqyXUQj5NTNWoy+SN+qlW3f+H/Afhu+WdsVM3/dguj35xnhGbXpz9MzPZ+R37
-saxbJgFwPzlks1zq+RAm7e7DFuXTmjyE+tYx8LGVjQRlWje+LZye4+QrC2mEMYY=
-=JXyA
+iQEcBAEBCAAGBQJSKy+SAAoJEJWyH81tNOV91wcH/ibBB7KIOFN8ki9lKbZdvpa7
+wLEhLPfJzyP1X6fLjzjEZpSEHLniZYgKbkGnvhh8r1Eul0KPBjXNKslYmPnlhjne
+05IhbRQGqOUFmwP7PsXcIC6zHRzFnOymTZoXwxfjVSN8cw1yuSslca6FI8Ygmr5O
+v28mw1MR0Ef3pMn3nMmYW+lZAqFd77HN35e6SSr/m1eE5zgsG9ZsfrA3Ft0Tlo5E
+AwudXv5NeLP3n/MUCj9uubeGefQ79hU1JBaq3pFrdiULEaOlbSHruRR5aKHIbgIN
+rT7vBG5FoSxK2gr2Zn2P3fxe28vPfp9wQBx79YpOLhLdt5XZ7Q8uIhtdbMbok7k=
+=OShD
 -----END PGP SIGNATURE-----
