@@ -1,27 +1,15 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 AUX units-2.01-install.patch 2008 SHA256 7487ec8d4d887cae48e6696361a5777b461eec48f1f2d2100b15fc593a578ab1 SHA512 73dfabad8fdbf24798e51f5104c0a68b28b30c53b162c28facd36cc53f5d68afa269decc04d4055475b17b4e5d932f449d174b41aab9546b5e6f2e32e0410203 WHIRLPOOL a3da2bc69feeb54360284e3d1158d68a2e0c29f784348b0e47c953d676c1398e1dd3d221b9800b4a4c5c32d98320bd2606df66e5fd7698385fb9a7e742e263d2
-DIST units-2.01.tar.gz 709368 SHA256 138b12c70bffa0e484fdfe579927412b1ac573e8351c17d8938592f9ba9a88f2 SHA512 ddaa9d8ad84aea963e84379f6d5d6298ec0431c56ba2c805a5fbc3695504279a7ba81609e33bb9d52771ee3ca739570b925d30aa1637dacb5a90d8c8c483fd37 WHIRLPOOL 1c97a5ca7b2e351773eae5850a30680817a5788f8324bd37d2d8632e8a3fcf2a9da7dd59ee0d415bc8617c1e89fcc2a82ac4a51e27f76a1ac8b77321ea035e17
 DIST units-2.02.tar.gz 768135 SHA256 2b34fa70c9319956135b990afc1ac99d411ba5b291b5d29e4a89fdf052944e9a SHA512 83cb6d2ac00304a5e14fd7c5137f70993bc2ea2f67852e4e64e2a718402c118ee3eaeb2bd251a1dca612fb6a995cd86b4c3eb353754540a14bd4d51cf1f5b0ed WHIRLPOOL d7253e97575cb6e85a6be5b30fe8be88fa1625e2d289f5e7c7f65a1b6baa96aa29978b0a212724977d81d67c664ced2dee5dd7b6e2c376550684ff7a1c9ca6e3
-EBUILD units-2.01.ebuild 824 SHA256 a8313ec940a23cb7c071c2a64b7ec6d3f5fb5e1f06dda6e5626dcb914d87c664 SHA512 d12a93bc2233da45de60cc4cf2d68c1423e20d15751aaa18057c721979450c14694ca9b172b57840ddb9437143941c544017ae1452b64909054e47f9dd4d158b WHIRLPOOL e624f4c8b45a51d436bb49a93030cbb8c3d541726f5e7a4650248ad160956d1bdad103172c7725a67b13fc839c54509717eeba9591f010ce683a67cfe4dcd6ca
 EBUILD units-2.02.ebuild 764 SHA256 a9984269297145797b0fad51581763b4b1b56d6721828dbfc1d57cb2505e874c SHA512 48a0c874637d54b873934b0bf488d3e6dd28a788bc3ab25d750f9a5d76d5343ce86c2510f8f0e912aef03660e455844108d8b11296c0d3a2e82c0d4c26faf667 WHIRLPOOL 74825569fa4f5e3083c10023830e6a5f026a464f26496e8b9d04023366d64c3d4fff3bae3c86aeeddbb2efd6ef16a29048e868b628eceb7b86490069f04a59f5
-MISC ChangeLog 9515 SHA256 5851c5859a26cea75adff19d2bcdd32ef92462d157d3a0934285a61e2e5247fa SHA512 ae3ad8360c815dff5355d83f06909f8e3a7f1f08e0bbb1425bdfdef5b5da21a547b76e927abb5d0498eca4cedd4f58761254e5bb2bf1f007848e46fa9e573f91 WHIRLPOOL 6c293eca9d6988067451149c14203f3cb47bc6a318fcc4137415dd561b17341934305cfc14d4f883eeefc73f210e8fbb662679137e515cb95ff458248789f679
+MISC ChangeLog 9590 SHA256 b5def9aa45aec7c555b37b617857a9dc35b17a325c467e077a1c6b71448d1139 SHA512 7b63c4b6a24c783286eca0d90220cba36a6720ec8dbce45f8049a22aa52545d5defde5851881487cb5c0481bf5a6f0d29206787d04e1815431592bd9a6362128 WHIRLPOOL f67aeb7e3980cb952d283620db98973e9f6122573cfb7388689f38ae76a916b2d7167d4da229d2e2d0867b22830d8bdff04bdb7e13f1a8e42f85bae6691de03b
 MISC metadata.xml 224 SHA256 d7ffc52704d4bc0180f6f1c448ea4bdd0e3ff3a562384dc944af4a00debc9620 SHA512 6487ad35c6f3d2e4876714919e7bb01fd65f57e7753cbfc318130727dded4fcf8632a06ab9b7a3016fc1ab127434d1d20de2dd0ef2cc63ad162023f2dbf64b1e WHIRLPOOL 879ad2c41f2e1297b677803b2b0478ed2affc91059b198524795e1a128cf8ab6b9fbe78b53bdd3421041f27b419bce387a267e389111125cd55b05e260abc998
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQIcBAEBCgAGBQJSKh+HAAoJELp701BxlEWfm+cP/2C5odlzxR04rcBXC8rIJ/kJ
-dJyJL1rBNS4DpnxAJwFywEy8VuaJXS/oJCwN2uXt6it7MEnvs3WcqR/J/WnWi5BG
-5Bu4CKAXcBJ7b/qTqSPdPHbokzUIdJZAwT4jIp/IY4W1xwMiHQxgx3BGLRrN5Jos
-Wq/L4/wSxclUGWhH7SNFBGHDpf5upeGCSvy5llwlzsJEvgFACVPkarTS4TE/glmG
-JThv/NTXER/rVHIOWRK5ASQCN0yM4tp6LE5lgMxwlxYzNgNx8AJsFlkEgYolljim
-/vd7WzFiSAzpHJI203vHEbcvfnGumLO+WPPn/0Mg8E+rPr4zykgbIcecooEQb3PM
-2fVegwZQcdsgQlJ8m+M+3Ut7zJH8lgaeVLLY9XMAoFGDZ2VL8ICH/F65JfIrxVc2
-RFlzWt9KAybA+LhcKoLvZbjjPn3wFOWPR3KdKSG3z87YuvImtRFTH6dDJ7e8Vrh4
-3myjLMZvMYZ4zJrygeFUozHgwatkl0ratLgqDuC8nPpqxmA5Go0BGTOZorj3eu58
-9JJvLxJQjuRH6bvHS2DbgLg24Jsn3Bxw27sCD7lOEpoD3Kn9yB2NPuo0oc8rji0T
-rW9Opqn7H9PU0IFtBqMmKfXe0A4u/WjWqOHrqLIuhto2o4+EJBfeM41uqZkm72BJ
-Z2sg0lGmbkWlXRzkFhwo
-=n19c
+iEYEAREIAAYFAlIrLLUACgkQVWmRsqeSphN/EgCdH+znkoy1iGyZjHF0ny4pANO9
+xp4AnjK82J+hSQhwHZzbpAAQqpN1/3Ua
+=VWjQ
 -----END PGP SIGNATURE-----
